--- a/CoolBlue/MainWindow.xaml
+++ b/CoolBlue/MainWindow.xaml
@@ -661,14 +661,14 @@
                     </dxg:GridColumn.EditSettings>
                 </dxg:GridColumn>
 
-                <dxg:GridColumn Name="nAccountID_C" FieldName="nAccountID_C" Header="CR Account" Width="150" AllowSorting="True" AllowEditing="True" EditFormStartNewRow="True">
+                <dxg:GridColumn Name="nAccountID_C" FieldName="nAccountID_C" Header="CR Account" Width="150" AllowSorting="True" AllowEditing="True" EditFormStartNewRow="True" Validate="nAccountID_C_Validate">
                     <dxg:GridColumn.EditSettings>
                         <dxg:LookUpEditSettings ItemsSource="{Binding Source={StaticResource uSP_getAllAccountsForSplitViewSource}}" AutoPopulateColumns="False" IsPopupAutoWidth="False" ValueMember="ID" DisplayMember="cName">
                             <dxg:LookUpEditSettings.PopupContentTemplate>
                                 <ControlTemplate TargetType="ContentControl">
                                     <dxg:GridControl x:Name="PART_GridControl" ShowBorder="True">
                                         <dxg:GridControl.View>
-                                            <dxg:TableView AllowPerPixelScrolling="True" VerticalScrollbarVisibility="Auto" ShowColumnHeaders="True" Grid.ColumnSpan="1" Margin="0,0,0,0" ShowBandsPanel="False" ShowBandsInCustomizationForm="False" ShowCheckBoxSelectorInGroupRow="False" ShowDragDropHint="False" ShowEditFormOnDoubleClick="False" ShowEditFormOnEnterKey="False" ShowEditFormOnF2Key="False" ShowEditFormUpdateCancelButtons="False" ShowGroupPanel="False" ShowHorizontalLines="False" ShowIndicator="False" ShowSearchPanelCloseButton="False" ShowValidationAttributeErrors="False" ShowVerticalLines="False" CustomCellAppearance="TableView_OnCustomCellAppearance">
+                                            <dxg:TableView Name="TableViewGridAccountID_C" AllowPerPixelScrolling="True" VerticalScrollbarVisibility="Auto" ShowColumnHeaders="True" Grid.ColumnSpan="1" Margin="0,0,0,0" ShowBandsPanel="False" ShowBandsInCustomizationForm="False" ShowCheckBoxSelectorInGroupRow="False" ShowDragDropHint="False" ShowEditFormOnDoubleClick="False" ShowEditFormOnEnterKey="False" ShowEditFormOnF2Key="False" ShowEditFormUpdateCancelButtons="False" ShowGroupPanel="False" ShowHorizontalLines="False" ShowIndicator="False" ShowSearchPanelCloseButton="False" ShowValidationAttributeErrors="False" ShowVerticalLines="False" CustomCellAppearance="TableView_OnCustomCellAppearance">
                                                 <dxg:TableView.FormatConditions>
                                                     <dxg:FormatCondition Expression="[Id] % 2 == 0" FieldName="Id">
                                                         <dx:Format Foreground="Red" Background="Yellow" FontWeight="Bold" />
@@ -697,8 +697,10 @@
                                             </dxg:TableView>
                                         </dxg:GridControl.View>
                                         <dxg:GridControl.Columns>
-                                            <dxg:GridColumn FieldName="cName" Width="200" />
-                                            <dxg:GridColumn FieldName="cAccountTypeName" />
+                                            <dxg:GridColumn Header="Account" FieldName="cName" Width="200" />
+                                            <dxg:GridColumn Header="Type" FieldName="cAccountTypeName" Width="100" />
+                                            <dxg:GridColumn Header="Currency" FieldName="currencyName" Width="60" />
+                                            <dxg:GridColumn FieldName="nCurrencyID" Visible="False" />
                                         </dxg:GridControl.Columns>
                                     </dxg:GridControl>
                                 </ControlTemplate>
@@ -712,14 +714,14 @@
                     </dxg:GridColumn.EditSettings>
                 </dxg:GridColumn>
 
-                <dxg:GridColumn Name="DrAccount" FieldName="nAccountID_D" Header="DR Account" Width="150" AllowSorting="True" AllowEditing="True" ShowValidationAttributeErrors="True" EditFormVisibleIndex="1">
+                <dxg:GridColumn Name="DrAccount" FieldName="nAccountID_D" Header="DR Account" Width="150" AllowSorting="True" AllowEditing="True" ShowValidationAttributeErrors="True" EditFormVisibleIndex="1" SortOrder="Descending" SortIndex="0">
                     <dxg:GridColumn.EditSettings>
                         <dxg:LookUpEditSettings ItemsSource="{Binding Source={StaticResource uSP_getAllAccountsForSplitViewSource}}" AutoPopulateColumns="False" IsPopupAutoWidth="False" ValueMember="ID" DisplayMember="cName">
                             <dxg:LookUpEditSettings.PopupContentTemplate>
                                 <ControlTemplate TargetType="ContentControl">
                                     <dxg:GridControl x:Name="PART_GridControl" ShowBorder="True">
                                         <dxg:GridControl.View>
-                                            <dxg:TableView AllowPerPixelScrolling="True" VerticalScrollbarVisibility="Auto" ShowColumnHeaders="False" Grid.ColumnSpan="1" Margin="0,0,0,0" ShowBandsPanel="False" ShowBandsInCustomizationForm="False" ShowCheckBoxSelectorInGroupRow="False" ShowDragDropHint="False" ShowEditFormOnDoubleClick="False" ShowEditFormOnEnterKey="False" ShowEditFormOnF2Key="False" ShowEditFormUpdateCancelButtons="False" ShowGroupPanel="False" ShowHorizontalLines="False" ShowIndicator="False" ShowSearchPanelCloseButton="False" ShowValidationAttributeErrors="False" ShowVerticalLines="False" CustomCellAppearance="TableView_OnCustomCellAppearance">
+                                            <dxg:TableView Name="TableViewGridAccountID_C" AllowPerPixelScrolling="True" VerticalScrollbarVisibility="Auto" ShowColumnHeaders="True" Grid.ColumnSpan="1" Margin="0,0,0,0" ShowBandsPanel="False" ShowBandsInCustomizationForm="False" ShowCheckBoxSelectorInGroupRow="False" ShowDragDropHint="False" ShowEditFormOnDoubleClick="False" ShowEditFormOnEnterKey="False" ShowEditFormOnF2Key="False" ShowEditFormUpdateCancelButtons="False" ShowGroupPanel="False" ShowHorizontalLines="False" ShowIndicator="False" ShowSearchPanelCloseButton="False" ShowValidationAttributeErrors="False" ShowVerticalLines="False" CustomCellAppearance="TableView_OnCustomCellAppearance">
                                                 <dxg:TableView.FormatConditions>
                                                     <dxg:FormatCondition Expression="[Id] % 2 == 0" FieldName="Id">
                                                         <dx:Format Foreground="Red" Background="Yellow" FontWeight="Bold" />
@@ -748,8 +750,10 @@
                                             </dxg:TableView>
                                         </dxg:GridControl.View>
                                         <dxg:GridControl.Columns>
-                                            <dxg:GridColumn FieldName="cName" Width="200" />
-                                            <dxg:GridColumn FieldName="cAccountTypeName" />
+                                            <dxg:GridColumn Header="Account" FieldName="cName" Width="200" />
+                                            <dxg:GridColumn Header="Type" FieldName="cAccountTypeName" Width="100" />
+                                            <dxg:GridColumn Header="Currency" FieldName="currencyName" Width="60" />
+                                            <dxg:GridColumn FieldName="nCurrencyID" Visible="False" />
                                         </dxg:GridControl.Columns>
                                     </dxg:GridControl>
                                 </ControlTemplate>
@@ -922,10 +926,10 @@
                     </dxg:GridColumn.EditSettings>
                 </dxg:GridColumn>
 
-                
 
 
-                <dxg:GridColumn FieldName="nCurrencyID" Header="Original Currency" Width="110" AllowSorting="True" AllowEditing="True" EditFormStartNewRow="True" EditFormVisibleIndex="10" SortOrder="Descending" SortIndex="0" MergeWithPreviousGroup="True">
+
+                <dxg:GridColumn FieldName="nCurrencyID" Header="Original Currency" Width="110" AllowSorting="True" AllowEditing="True" EditFormStartNewRow="True" EditFormVisibleIndex="10" MergeWithPreviousGroup="True">
                     <dxg:GridColumn.EditSettings>
                         <dxg:LookUpEditSettings ItemsSource="{Binding Source={StaticResource uSP_getAllCurrencyViewSource}}" AutoPopulateColumns="False" IsPopupAutoWidth="False" ValueMember="ID" DisplayMember="cName">
                             <dxg:LookUpEditSettings.PopupContentTemplate>
@@ -979,8 +983,10 @@
                 </dxg:GridColumn>
 
 
+                <dxg:GridColumn Name="nDrCurrencyID" FieldName="nDrCurrencyID" Header="Memo" Width="130" AllowSorting="True" EditFormVisibleIndex="7" MergeWithPreviousGroup="True" Visible="False" EditFormVisible="False" />
+                <dxg:GridColumn Name="nCrCurrencyID" FieldName="nCrCurrencyID" Header="Memo" Width="130" AllowSorting="True" EditFormVisibleIndex="7" MergeWithPreviousGroup="True" Visible="False" EditFormVisible="False" />
 
-                
+
 
 
             </dxg:GridControl>
